# CS_538_harveyz1

./: .clang-format  .gitignore  CMakeLists.txt  README.org  build.sh  forceChange.sh  starfleet.html
docs/: final-project.bib
screenshots/: Assign02.script.txt
shaders/ExerciseApp/: Quad.vs
shaders/PotatoRenderApp/: Quad.fs
src/app/: Assign01.cpp  BasicRenderApp.cpp  Exercise01.cpp  ExerciseApp.cpp  PExercise01.cpp  PotatoRenderApp.cpp  tester.cpp
src/include/: A01RenderEngine.hpp  Bary.hpp  BasicRenderEngine.hpp  BoundBox.hpp  Buffer.hpp  Clipping.hpp  Exceptions.hpp  ExerciseRenderEngine.hpp  Fragment.hpp  GLSetup.hpp  Line.hpp  Matrix.hpp  Mesh.hpp  MeshData.hpp  MeshGLData.hpp  OBJModel.hpp  Object3D.hpp  PE01RenderEngine.hpp  PotatoExampleEngine.hpp  PotatoForwardEngine.hpp  PotatoRayEngine.hpp  PotatoRenderEngine.hpp  Rasterize.hpp  Ray.hpp  Settings.hpp  Shader.hpp  Testing.hpp  Timing.hpp  Utility.hpp  Vector.hpp  XML.hpp  box.hpp  camera.hpp  generator.hpp  interval.hpp  materials.hpp  objects.hpp  sphere.hpp  vec.hpp
src/lib/: A01RenderEngine.cpp  BasicRenderEngine.cpp  BoundBox.cpp  Clipping.cpp  ExerciseRenderEngine.cpp  GLSetup.cpp  Mesh.cpp  MeshGLData.cpp  OBJModel.cpp  PE01RenderEngine.cpp  PotatoExampleEngine.cpp  PotatoForwardEngine.cpp  PotatoRayEngine.cpp  PotatoRenderEngine.cpp  Rasterize.cpp  Shader.cpp  Utility.cpp  XML.cpp  box.cpp  camera.cpp  generator.cpp  interval.cpp  objects.cpp  tester.cpp
src/tests/: TestVec3.cpp
